--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body { 
-	font-family: "Futura"; background-color: #eee; margin : 0; padding : 0;
+	font-family: "Futura"; 
+    background-color: #eee; 
+    margin : 0; 
+    padding : 0;
 }
 /*svg { border: solid black 1px; }*/
 .axis path { fill: none; stroke: black; stroke-width : 1; }
@@ -14,9 +17,9 @@ path {
 	font-size: 25px;
 }
 #map { 
-    position : absolute; 
-    top : 60; 
-    bottom : 0; 
+    position : relative; 
+    top : 60px; 
+    margin-bottom: 100px; 
     width : 100%;
     height : 70%;
 }
