--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,19 @@
 body { 
 	font-family: "Futura"; 
-    background-color: #eee; 
+    background-color: white; 
     margin : 0; 
     padding : 0;
     width: 100%;
 }
 
+/*tengli*/
+svg { border: solid black 1px; }
+
+.div { text-align: center; }
+
 
 /*svg { border: solid black 1px; }*/
-.axis path { fill: none; stroke: black; stroke-width : 1; }
+.axis path { fill: none; stroke: black; stroke-width : 1;}
 .axis line { stroke: black; }
 .center { text-align: center; }
 path {
@@ -25,14 +30,20 @@ path {
 #map { 
     position : relative; 
     top : 5%; 
-    margin-bottom: 1%; 
-    width : 100%;
+    margin-bottom: 0%; 
+    margin-left: 5%;
+    margin-right: 5%;
+    width : 90%;
     height : 70%;
+}
+#citation{
+    margin-left: 5%;
 }
 #aqiRange{
     width: 50%;
+    margin-top: 1%;
     margin-left: 25%;
-     -webkit-appearance: none;
+    -webkit-appearance: none;
     background-color: #012C5F;
     opacity:.8;
     height:20px;
@@ -40,15 +51,30 @@ path {
 
 /*city info */
 #secondViz{
-    width: 50%;
-    height: 100px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    /*display: inline-block;*/
+}
+.secondVizChildDiv{
+    /*display: inline-block;*/
 }
 
+#leftHalf{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+#donutChartDiv{
+    width: 100%;
+/*    height: 100%;*/
+    height: 400px;
+}
 #donutChartSvg{
     width: 100%;
     height: 100%;
 }
-
+     
 #donutChartSvg path.slice{
     stroke-width:2px;
 }
@@ -59,11 +85,37 @@ path {
     stroke-width: 2px;
     fill: none;
 }
-/*style of second visualization*/
-#secondViz{
+#cityNameInDonutChart{
+    font-size: 25px;
+}
+#donutCharTitle, #monthHighVSLowTitle{
+    text-align: center;
+}
+#rightHalf{
+    width: 50%;
+    height: 100%;
+    float: left;
+    display: inline-block;
+}
+.bar {
+    fill: steelblue;
+}
+.highBar{
+    fill:red;
+}
+.lowBar{
+    fill:green;
+}
+#monthlyHighVsLowBarChartDiv{
     width: 100%;
+    /*height: 100%;*/
     height: 400px;
 }
+#monthlyHighVsLowBarChartSvg{
+    margin-top: 5%;
+    margin-left: 3%;
+}
+/*style of second visualization*/
 #comparison{
     width: 100%;
     height: 90%;
